@@ -8,13 +8,12 @@ import net.logstash.logback.appender.LogstashTcpSocketAppender;
 import net.logstash.logback.encoder.LogstashEncoder;
 import net.logstash.logback.stacktrace.ShortenedThrowableConverter;
 import org.slf4j.LoggerFactory;
+import org.springframework.boot.autoconfigure.AutoConfiguration;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
-import org.springframework.context.annotation.Configuration;
 
 import java.net.InetSocketAddress;
-import java.util.stream.Collectors;
 
-@Configuration
+@AutoConfiguration
 @EnableConfigurationProperties(value = { LogstashAppenderConfigurationProperty.class })
 @Slf4j
 public class LogstashAppenderConfiguration {
@@ -43,7 +42,7 @@ public class LogstashAppenderConfiguration {
         logstashTcpSocketAppender.setEncoder(logstashEncoder);
         logstashTcpSocketAppender.addDestinations(this.logstashAppenderConfigurationProperty.getDestinations().stream()
                 .map(destination -> new InetSocketAddress(destination.getHost(), destination.getPort()))
-                .collect(Collectors.toList())
+                .toList()
                 .toArray(InetSocketAddress[]::new)
         );
 
